// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render an author profile page 1`] = `
<div>
  <header
    className="responsive-styles__component-fbPFZZ eNPgyU"
    role="banner"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div
        data-testid="author-head"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        >
          <div>
            <div
              style={
                Object {
                  "display": "table",
                  "height": 0,
                  "overflow": "hidden",
                  "paddingBottom": "100%",
                }
              }
            >
              <img
                alt=""
                src="//www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                style={
                  Object {
                    "display": "block",
                    "position": "absolute",
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
              />
              <div
                style={
                  Object {
                    "bottom": "0px",
                    "left": "0px",
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ jMuMhk"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          Deborah Haynes
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
        >
          defence editor
        </h2>
        <div>
          <svg
            height={15}
            width={15}
          >
            <path
              fill="#006699"
            />
          </svg>
          <a
            dir="auto"
            href="https://twitter.com/jdoe"
            role="link"
          >
            @
            jdoe
          </a>
        </div>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          >
            Deborah Haynes is the defence editor at 
            <em>
              The Times
            </em>
            , covering the most important defence & security news in the UK and around the world.
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    className="responsive-styles__component-fbPFZZ hkMMvo"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 1 - 3 of 20 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div>
              <a
                href="?page=2"
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
              >
                <div
                  data-testid="pagination-button-next"
                >
                  <div
                    dir="auto"
                  >
                    <span
                      dir="auto"
                    >
                      Next
                      <span
                        className="responsive-styles__component-fbPFZZ hqaoTY"
                        dir="auto"
                      >
                         page
                      </span>
                    </span>
                  </div>
                  <svg
                    height={12}
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path />
                    </g>
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        data-testid="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      >
        <a
          href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ ereXyn"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="articleListImage"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "66.66666666666667%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=100"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "bottom": "0px",
                            "left": "0px",
                            "position": "absolute",
                            "right": "0px",
                            "top": "0px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="articleListContent"
                >
                  <div>
                    <h3
                      aria-level="3"
                      dir="auto"
                      role="heading"
                      style={
                        Object {
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": "22px",
                          "fontWeight": "400",
                          "lineHeight": "22px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Top medal for forces dog who took a bite out of the Taliban
                    </h3>
                    <div
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "20px",
                        }
                      }
                    >
                      <span
                        dir="auto"
                      >
                        
                        The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                        ...
                      </span>
                    </div>
                    <div
                      aria-label="datePublication"
                      data-testid="datePublication"
                      dir="auto"
                      style={
                        Object {
                          "fontSize": "13px",
                          "lineHeight": "15px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Friday November 17 2017, 12:01am, The Times
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        data-testid="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/social-media-must-raise-game-to-beat-terrorists-says-un-chief-s5w8878f0"
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ ereXyn"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="articleListImage"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "66.66666666666667%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=100"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "bottom": "0px",
                            "left": "0px",
                            "position": "absolute",
                            "right": "0px",
                            "top": "0px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="articleListContent"
                >
                  <div>
                    <h3
                      aria-level="3"
                      dir="auto"
                      role="heading"
                      style={
                        Object {
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": "22px",
                          "fontWeight": "400",
                          "lineHeight": "22px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Social media must raise game to beat terrorists, says UN chief
                    </h3>
                    <div
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "20px",
                        }
                      }
                    >
                      <span
                        dir="auto"
                      >
                        
                        The head of the United Nations has added his voice to calls for Facebook, YouTube, Microsoft and Twitter to help to stop the spread of terrorist
                        ...
                      </span>
                    </div>
                    <div
                      aria-label="datePublication"
                      data-testid="datePublication"
                      dir="auto"
                      style={
                        Object {
                          "fontSize": "13px",
                          "lineHeight": "15px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Friday November 17 2017, 12:01am, The Times
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        data-testid="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        id="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/cuts-have-left-the-army-20-years-out-of-date-says-former-general-sir-richard-barrons-lg9txzbpn"
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ ereXyn"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="articleListImage"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "66.66666666666667%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F459f7782-c950-11e7-9ee9-e45ae7e1cdd4.jpg?crop=5448%2C3632%2C0%2C0&resize=100"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "bottom": "0px",
                            "left": "0px",
                            "position": "absolute",
                            "right": "0px",
                            "top": "0px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="articleListContent"
                >
                  <div>
                    <h3
                      aria-level="3"
                      dir="auto"
                      role="heading"
                      style={
                        Object {
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": "22px",
                          "fontWeight": "400",
                          "lineHeight": "22px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Cuts have left the army 20 years out of date, says former general
                    </h3>
                    <div
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "20px",
                        }
                      }
                    >
                      <span
                        dir="auto"
                      >
                        
                        Britain’s cash-strapped army is 20 years out of date and would be incapable of surviving Russian artillery and air strikes in a conflict, a
                        ...
                      </span>
                    </div>
                    <div
                      aria-label="datePublication"
                      data-testid="datePublication"
                      dir="auto"
                      style={
                        Object {
                          "fontSize": "13px",
                          "lineHeight": "15px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Tuesday November 14 2017, 05:00pm, The Times
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div>
              <a
                href="?page=2"
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
              >
                <div
                  data-testid="pagination-button-next"
                >
                  <div
                    dir="auto"
                  >
                    <span
                      dir="auto"
                    >
                      Next
                      <span
                        className="responsive-styles__component-fbPFZZ hqaoTY"
                        dir="auto"
                      >
                         page
                      </span>
                    </span>
                  </div>
                  <svg
                    height={12}
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path />
                    </g>
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. Render an author profile page without images 1`] = `
<div>
  <header
    className="responsive-styles__component-fbPFZZ eNPgyU"
    role="banner"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div
        data-testid="author-head"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        >
          <div>
            <div
              style={
                Object {
                  "display": "table",
                  "height": 0,
                  "overflow": "hidden",
                  "paddingBottom": "100%",
                }
              }
            >
              <img
                alt=""
                src="//www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                style={
                  Object {
                    "display": "block",
                    "position": "absolute",
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
              />
              <div
                style={
                  Object {
                    "bottom": "0px",
                    "left": "0px",
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ jMuMhk"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          Deborah Haynes
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
        >
          defence editor
        </h2>
        <div>
          <svg
            height={15}
            width={15}
          >
            <path
              fill="#006699"
            />
          </svg>
          <a
            dir="auto"
            href="https://twitter.com/jdoe"
            role="link"
          >
            @
            jdoe
          </a>
        </div>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          >
            Deborah Haynes is the defence editor at 
            <em>
              The Times
            </em>
            , covering the most important defence & security news in the UK and around the world.
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    className="responsive-styles__component-fbPFZZ hkMMvo"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 1 - 3 of 20 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div>
              <a
                href="?page=2"
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
              >
                <div
                  data-testid="pagination-button-next"
                >
                  <div
                    dir="auto"
                  >
                    <span
                      dir="auto"
                    >
                      Next
                      <span
                        className="responsive-styles__component-fbPFZZ hqaoTY"
                        dir="auto"
                      >
                         page
                      </span>
                    </span>
                  </div>
                  <svg
                    height={12}
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path />
                    </g>
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        data-testid="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      >
        <a
          href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ ereXyn"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="articleListContent"
                >
                  <div
                    className="responsive-styles__component-fbPFZZ dQznFS"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Top medal for forces dog who took a bite out of the Taliban
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
                        </span>
                        <span
                          dir="auto"
                        >
                           
                          Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "fontSize": "13px",
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Friday November 17 2017, 12:01am, The Times
                      </div>
                    </div>
                  </div>
                  <div
                    className="responsive-styles__component-fbPFZZ jwwxoJ"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Top medal for forces dog who took a bite out of the Taliban
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
                        </span>
                        <span
                          dir="auto"
                        >
                           
                          Mali sniffed out explosives and insurgents during a
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "fontSize": "13px",
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Friday November 17 2017, 12:01am, The Times
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        data-testid="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/social-media-must-raise-game-to-beat-terrorists-says-un-chief-s5w8878f0"
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ ereXyn"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="articleListContent"
                >
                  <div
                    className="responsive-styles__component-fbPFZZ dQznFS"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Social media must raise game to beat terrorists, says UN chief
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          The head of the United Nations has added his voice to calls for Facebook, YouTube, Microsoft and Twitter to help to stop the spread of terrorist material online.
                        </span>
                        <span
                          dir="auto"
                        >
                           
                          António Guterres said last night that Islamic State and other terrorist groups were losing physical ground in Iraq and Syria but were growing their presence in cyberspace. He described terrorism as
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "fontSize": "13px",
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Friday November 17 2017, 12:01am, The Times
                      </div>
                    </div>
                  </div>
                  <div
                    className="responsive-styles__component-fbPFZZ jwwxoJ"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Social media must raise game to beat terrorists, says UN chief
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          The head of the United Nations has added his voice to calls for Facebook, YouTube, Microsoft and Twitter to help to stop the spread of terrorist material online.
                        </span>
                        <span
                          dir="auto"
                        >
                           
                          António Guterres said last night that Islamic State and
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "fontSize": "13px",
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Friday November 17 2017, 12:01am, The Times
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        data-testid="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        id="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/cuts-have-left-the-army-20-years-out-of-date-says-former-general-sir-richard-barrons-lg9txzbpn"
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ ereXyn"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="articleListContent"
                >
                  <div
                    className="responsive-styles__component-fbPFZZ dQznFS"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Cuts have left the army 20 years out of date, says former general
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          Britain’s cash-strapped army is 20 years out of date and would be incapable of surviving Russian artillery and air strikes in a conflict, a former military chief said today.
                        </span>
                        <span
                          dir="auto"
                        >
                           
                          General Sir Richard Barrons, the commander of Joint Forces Command until last year, warned that the entire armed forces were on the brink of operational or institutional failure unless
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "fontSize": "13px",
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Tuesday November 14 2017, 05:00pm, The Times
                      </div>
                    </div>
                  </div>
                  <div
                    className="responsive-styles__component-fbPFZZ jwwxoJ"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Cuts have left the army 20 years out of date, says former general
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          Britain’s cash-strapped army is 20 years out of date and would be incapable of surviving Russian artillery and air strikes in a conflict, a former military chief said today.
                        </span>
                        <span
                          dir="auto"
                        >
                           
                          General Sir Richard Barrons, the commander of
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "fontSize": "13px",
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Tuesday November 14 2017, 05:00pm, The Times
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div>
              <a
                href="?page=2"
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
              >
                <div
                  data-testid="pagination-button-next"
                >
                  <div
                    dir="auto"
                  >
                    <span
                      dir="auto"
                    >
                      Next
                      <span
                        className="responsive-styles__component-fbPFZZ hqaoTY"
                        dir="auto"
                      >
                         page
                      </span>
                    </span>
                  </div>
                  <svg
                    height={12}
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path />
                    </g>
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. Render an author profile page loading state 1`] = `
<div>
  <header
    className="responsive-styles__component-fbPFZZ eNPgyU"
    role="banner"
  >
    <div>
      <div>
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
            }
          }
        />
      </div>
    </div>
  </header>
  <div
    className="responsive-styles__component-fbPFZZ hkMMvo"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="empty.0"
        data-testid="empty.0"
        id="empty.0"
      >
        <div
          className="responsive-styles__component-fbPFZZ ereXyn"
        >
          <div>
            <div
              className="articleListImage"
            >
              <div>
                <div
                  style={
                    Object {
                      "display": "table",
                      "height": 0,
                      "overflow": "hidden",
                      "paddingBottom": "66.66666666666667%",
                    }
                  }
                >
                  <img
                    alt=""
                    src=""
                    style={
                      Object {
                        "display": "block",
                        "position": "absolute",
                        "width": "100%",
                        "zIndex": 1,
                      }
                    }
                  />
                  <div
                    style={
                      Object {
                        "bottom": "0px",
                        "left": "0px",
                        "right": "0px",
                        "top": "0px",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="articleListContent"
            >
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.1"
        data-testid="empty.1"
        id="empty.1"
      >
        <div />
        <div
          className="responsive-styles__component-fbPFZZ ereXyn"
        >
          <div>
            <div
              className="articleListImage"
            >
              <div>
                <div
                  style={
                    Object {
                      "display": "table",
                      "height": 0,
                      "overflow": "hidden",
                      "paddingBottom": "66.66666666666667%",
                    }
                  }
                >
                  <img
                    alt=""
                    src=""
                    style={
                      Object {
                        "display": "block",
                        "position": "absolute",
                        "width": "100%",
                        "zIndex": 1,
                      }
                    }
                  />
                  <div
                    style={
                      Object {
                        "bottom": "0px",
                        "left": "0px",
                        "right": "0px",
                        "top": "0px",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="articleListContent"
            >
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.2"
        data-testid="empty.2"
        id="empty.2"
      >
        <div />
        <div
          className="responsive-styles__component-fbPFZZ ereXyn"
        >
          <div>
            <div
              className="articleListImage"
            >
              <div>
                <div
                  style={
                    Object {
                      "display": "table",
                      "height": 0,
                      "overflow": "hidden",
                      "paddingBottom": "66.66666666666667%",
                    }
                  }
                >
                  <img
                    alt=""
                    src=""
                    style={
                      Object {
                        "display": "block",
                        "position": "absolute",
                        "width": "100%",
                        "zIndex": 1,
                      }
                    }
                  />
                  <div
                    style={
                      Object {
                        "bottom": "0px",
                        "left": "0px",
                        "right": "0px",
                        "top": "0px",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="articleListContent"
            >
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. Render an author profile page error state 1`] = `
<div
  className="responsive-styles__component-fbPFZZ NudQU"
>
  <div
    className="responsive-styles__component-fbPFZZ Xuekk"
  >
    <div>
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "110%",
          }
        }
      >
        <img
          alt=""
          src="https://www.thetimes.co.uk/d/img/internal-error-c45d0e8347.png"
          style={
            Object {
              "display": "block",
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": "0px",
              "left": "0px",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ kHDyWV"
  >
    <div
      dir="auto"
    >
      Something's gone wrong
    </div>
    <div
      dir="auto"
    >
      We can't load the page you have requested. Please check your network connection and retry to continue
    </div>
    <div
      aria-label="Retry"
      role="button"
      tabIndex="0"
    >
      <div
        dir="auto"
        title="Retry"
      >
        Retry
      </div>
    </div>
  </div>
</div>
`;

exports[`5. Send analytics when rendering an Author Profile page 1`] = `
Object {
  "action": "Viewed",
  "attrs": Object {
    "articlesCount": 20,
    "authorName": "Deborah Haynes",
    "eventTime": "2018-01-01T00:00:00.000Z",
    "page": 1,
    "pageSize": 3,
  },
  "component": "Page",
  "object": "AuthorProfile",
}
`;
